[package]
name = "sentence"
version = "0.1.0"
edition = "2021"
default-run = "sentence"

[profile.benchmark]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
zip = "2.2.0"
